<resources>

    <!-- APP -->
    <string name="app_name">Meet</string>

    <!-- index -->
    <string name="app_index_text">It\'s always nice to meet</string>

    <!-- guide -->
    <string name="text_guide_skip">skip</string>
    <string name="text_guide_pager_1">Everyone is a lonely planet</string>
    <string name="text_guide_pager_2">We seek light in the dark</string>
    <string name="text_guide_pager_3">If you meet, please smile</string>

    <!-- login -->
    <string name="text_login_phone">phone number</string>
    <string name="text_login_password">password</string>
    <string name="text_login_code">code</string>
    <string name="text_login_send">send</string>
    <string name="text_login_login">login</string>
    <string name="text_login_by_account">login by account</string>
    <string name="text_login_agreement_1">I have read and agree</string>
    <string name="text_login_agreement_2"><u>User agreement</u></string>
    <string name="text_login_phone_null">The phone number cannot be empty</string>
    <string name="text_login_phone_not_valid">The phone number is not valid</string>
    <string name="text_login_code_null">The captcha cannot be empty</string>
    <string name="text_login_code_error">Verification code error</string>
    <string name="text_login_failure">Fail to login, please try again later</string>
    <string name="text_login_account_login_failure">wrong account or password</string>

    <!-- main -->
    <string name="text_main_star">star</string>
    <string name="text_main_square">square</string>
    <string name="text_main_chat">chat</string>
    <string name="text_main_me">me</string>

    <string name="text_mian_dialog_text1">Welcome to meet App</string>
    <string name="text_mian_dialog_text2">I heard this is your first time to use it</string>
    <string name="text_mian_dialog_text3">Come and fill in the information</string>

    <string name="text_dialog_camera">Take a photo</string>
    <string name="text_dialog_ablum">Select from album</string>
    <string name="text_dialog_cancel">Cancel</string>

    <string name="text_add_friend_contact">Import from address book</string>
    <string name="text_add_friend_title">The search results</string>
    <string name="text_add_friend_no_me">You can\'t query yourself</string>

    <string name="text_upload_photo_title">A profile picture with personality can attract people</string>
    <string name="text_upload_nickname_title">A name, a story</string>
    <string name="text_upload_nickname">nickname</string>
    <string name="text_upload_done">complete</string>

    <string name="text_search_age">annum</string>

    <string name="text_user_request_succeed">request successful</string>
    <string name="text_user_request_fail">request fail</string>

    <string name="text_me_item_title_1">user info</string>
    <string name="text_me_item_title_3">new friend</string>
    <string name="text_me_item_title_4">Privacy Settings</string>
    <string name="text_me_item_title_5">share</string>
    <string name="text_me_item_title_6">setting</string>

    <string name="text_main_star_1">random</string>
    <string name="text_main_star_2">soul</string>
    <string name="text_main_star_3">fate</string>
    <string name="text_main_star_4">love</string>

    <!-- personal info -->
    <string name="text_me_info_name">The name</string>
    <string name="text_me_info_sex">gender</string>
    <string name="text_me_info_age">age</string>
    <string name="text_me_info_desc">desc</string>
    <string name="text_me_info_birthday">birthday</string>
    <string name="text_me_info_constellation">constellation</string>
    <string name="text_me_info_hobby">hobby</string>
    <string name="text_me_info_status">status</string>
    <string name="text_me_info_tips">Hello, this is </string>
    <string name="text_me_info_boy">boy</string>
    <string name="text_me_info_girl">girl</string>

    <!-- menu -->
    <string name="menu_input_text">publish</string>
    <string name="menu_info_save_text">save</string>
    <string name="menu_info_save_success">successful</string>

    <!-- new friend -->
    <string name="text_user_add_friend">Add friends</string>
    <string name="text_user_chat">chat</string>
    <string name="text_user_audio_chat">audio chat</string>
    <string name="text_user_video_chat">video chat</string>
    <string name="text_user_resuest_succeed">request successful</string>
    <string name="text_user_resuest_fail">request fail</string>

    <string name="text_new_friend_agree">Agreed</string>
    <string name="text_new_friend_no_agree">Refused</string>

    <!-- add new friend send message dialog -->
    <string name="dialog_add_firend_title">Add contacts</string>
    <string name="dialog_add_firend_msg">Leave a message..</string>
    <string name="dialog_add_firend_confirm">confirm</string>
    <string name="dialog_add_firend_add">add</string>
    <string name="dialog_add_firend_cancel">Cancel</string>

    <!-- chat tab -->
    <string name="text_chat_tab_title_1">Chat history</string>
    <string name="text_chat_tab_title_2">Call records</string>
    <string name="text_chat_tab_title_3">All friends</string>

    <!-- push -->
    <string name="text_square_psuh">release</string>
    <string name="text_square_hint_text">Record this moment and share it with someone who understands you..</string>

</resources>
