<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_login_bg" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_bg"
                android:cursorVisible="true"
                android:hint="@string/text_login_phone"
                android:inputType="number"
                android:padding="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_bg"
                android:cursorVisible="true"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                android:padding="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/text_login_login"
            android:textColor="@android:color/white" />


        <TextView
            android:visibility="gone"
            android:id="@+id/tv_test_login"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:textColor="@color/colorAccent"
            android:text="测试登录"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>